# DeepResume

./: README.md  docker-compose.yml  package-lock.json  package.json
algorithm/: algorithm.tex
algorithm/ai_algorithm_interview_guide/: 02_7day_sprint.md  04_common_knowledge_checklist.md  05_interview_experience_and_strategy.md  README.md
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py  repository.py  schemas.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/services/: __init__.py  evidence.py  gap_analyzer.py  job_parser.py  learning_plan_parser.py  planner.py  resume_assembler.py  resume_parser.py  skills.py  task_progress.py
apps/api/tests/: test_api.py  test_gap_and_progress.py  test_parsers.py
apps/web/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/types/: lucide-react.d.ts
docs/: CV2Offer_developdocs.md  CV2Offer_plan.md  product-design.md  system-design.md
frontend/: frontend.md  frontend.tex
frontend/frontend_interview_guide/: 02_7day_sprint.md  04_common_knowledge_checklist.md  06_hot_resources.md  README.md
interview_experience/: 微π.md
references/deepresume/: README.md  reference_routes.json
references/deepresume/algorithm/: algorithm.md
references/deepresume/testdevelop/: testdevelop.tex
testdevelop/: testdevelop.md
testdevelop/testdevelop_interview_guide/: 01_learning_mainline.md  02_fast_foundation_notes.md  05_common_knowledge_checklist.md  06_interview_experience_and_strategy.md
(+11 files in other folders)
