[project]
name = "cv2offer-api"
version = "0.1.0"
description = "FastAPI backend for CV2Offer Agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.7",
  "uvicorn>=0.29",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
